k8s/manifests/frontend/frontend.yaml
# Copyright 2025, Battelle Energy Alliance, LLC, ALL RIGHTS RESERVED

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - image: 869935092417.dkr.ecr.us-west-1.amazonaws.com/inl-image-registry/portalweb:latest
          imagePullPolicy: Always
          name: frontend
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config-volume
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
      volumes:
        - name: nginx-config-volume
          configMap:
            name: nginx-config
      imagePullSecrets:
        - name: inl-registry-creds

---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
spec:
  rules:
    - host: coreii-portal.caiser.ornlkdi.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
  tls:
    - hosts:
        - coreii-portal.caiser.ornlkdi.org
      secretName: tls
